--- a/example.conf
+++ b/example.conf
@@ -4,20 +4,46 @@
 ; Enable verbose output (defaults to false)
 verbose = true
 
+
 ; Only one output may be defined each time
 
-[output]
-type = hackrf		; Output to a hackrf
-frequency = 855e6	; Transmit on 855MHz
-sample_rate = 20480000	; Or 10240000, but signal quality may suffer
-gain = 47		; Control the TX gain
-amp = false		; Control the TX amplifier (default false)
+;[output]
+;type = hackrf		; Output to a hackrf
+;frequency = 855e6	; Transmit on 855MHz
+;sample_rate = 20480000	; Or 10240000, but signal quality may suffer
+;gain = 47		; Control the TX gain
+;amp = false		; Control the TX amplifier (default false)
 
 ;[output]
-;type = file		; Output to a file
-;output = signal.iq	; Write to "signal.iq"
-;data_type = float	; uint8|int8|uint16|int16|int32|float
+;type = file		; Output to a UDP socket
+;output = udp://127.0.0.1:5000
+;data_type = unmod_udp	; uint8|int8|uint16|int16|int32|float|unmod_uint8|unmod_udp
 ;sample_rate = 20480000	; Or any multiple of 10240000
+
+;UDP Output
+
+[output]
+type = file		; Output to a UDP socket
+output = udp://127.0.0.1:5000
+data_type = unmod_udp	; uint8|int8|uint16|int16|int32|float|unmod_uint8|unmod_udp
+sample_rate = 20480000;20480000	; Or any multiple of 10240000
+
+;File Output
+  
+;[output]
+;type = file		; Output to a file as raw stream (uint16)
+;output = signalraw.iq	; Write to "signal.iq"
+;data_type = unmod_uint8	; uint8|int8|uint16|int16|int32|float|unmod_uint8|unmod_udp
+;sample_rate = 20480000	; Or any multiple of 10240000
+
+
+;[output]
+;type = file		; Output to a file as raw stream (float)
+;output = signalf32.iq	; Write to "signal.iq"
+;data_type = float	; uint8|int8|uint16|int16|int32|float|unmod_uint8|unmod_udp
+;sample_rate = 20480000	; Or any multiple of 10240000
+
+
 
 ; Channel 1 reads from a raw 16-bit 32 kHz stereo audio file
 
