Add UDP broadcast support for multiple clients
- Remove connect() call to allow multiple UDP clients
- Enable SO_BROADCAST socket option
- Change from send() to sendto() for flexible addressing
- Store target address in rf_udp_t structure
- Update configuration files with broadcast examples
- Backward compatible: existing unicast configs still work

--- a/src/example.conf
+++ b/src/example.conf
@@ -28,11 +28,21 @@ verbose = true
 
 
 [output]
-type = file		; Output to a file as raw stream (uint16)
-output = signalf32.iq	; Write to "signal.iq"
-data_type = float	; uint8|int8|uint16|int16|int32|float|unmod_uint8|unmod_udp
-sample_rate = 20480000	; Or any multiple of 10240000
+;type = file		; Output to a file as raw stream (uint16)
+;output = signalf32.iq	; Write to "signal.iq"
+;data_type = float	; uint8|int8|uint16|int16|int32|float|unmod_uint8|unmod_udp
+;sample_rate = 20480000	; Or any multiple of 10240000
 
+;UDP Output
+; Für einen einzelnen Client: udp://127.0.0.1:5000 (oder spezifische IP)
+; Für mehrere Clients: udp://255.255.255.255:5000 (Broadcast)
+;                       oder udp://192.168.1.255:5000 (Netzwerk-Broadcast)
+
+[output]
+type = file		; Output to a UDP socket
+output = udp://127.0.0.1:5000	; Einzelner Client (oder 255.255.255.255 für Broadcast)
+data_type = unmod_udp	; uint8|int8|uint16|int16|int32|float|unmod_uint8|unmod_udp
+sample_rate = 20480000;20480000	; Or any multiple of 10240000
 
 ; Channel 1 reads from a raw 16-bit 32 kHz stereo audio file
 
