--- a/example.conf
+++ b/example.conf
@@ -16,10 +16,13 @@ verbose = true
 
 
 ;UDP Output
+; Für einen einzelnen Client: udp://127.0.0.1:5000 (oder spezifische IP)
+; Für mehrere Clients: udp://255.255.255.255:5000 (Broadcast)
+;                       oder udp://192.168.1.255:5000 (Netzwerk-Broadcast)
 
 [output]
 type = file		; Output to a UDP socket
-output = udp://127.0.0.1:5000
+output = udp://127.0.0.1:5000	; Einzelner Client (oder 255.255.255.255 für Broadcast)
 data_type = unmod_udp	; uint8|int8|uint16|int16|int32|float|unmod_uint8|unmod_udp
 sample_rate = 20480000;20480000	; Or any multiple of 10240000
 
